AUT-233 - Add claims to ClientRegistry
- So RPs are only issued claims that they have registered to receive.